# OpenEnv

./: .gitignore  README.md  client.py  env.py  graders.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  tasks.py
server/: __init__.py  __main__.py  app.py
tests/: test_env.py  test_server.py  test_tasks_graders.py
