[project]
name = "customer-support-openenv"
version = "0.1.0"
description = "OpenEnv customer support ticket resolution environment"
authors = [{ name = "Harshith" }]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "openai"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"